--- a/Demo Files/test/hello.html
+++ b/Demo Files/test/hello.html
@@ -1,4 +1,4 @@
-Hello, please translate this, thanks very much!
+Hello, please translate this, thanks very much again.
 
 
 here's another line to include, thank you again.
